Documentation updates; new Dockerhub repos